fix about section mobile link display
**what**
links on mobile were missing css for inline and general style

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -521,6 +521,17 @@ main {
         margin-bottom: 15px;
     }
 
+.about-text-link {
+    text-align: justify;
+    text-justify: inter-word;
+    display: inline;
+    color: orange;
+    font-size: var(--fs-6);
+    font-weight: bold;
+    line-height: 1.6;
+        
+}
+
 
 
 /**
